@@ -27,12 +27,14 @@ LOGGING['loggers']['mapentity']['handlers'].append('logfile')
 #  Email settings
 #..........................
 
-ADMINS = (
-    ('Admin %s' % TITLE, envini.get('mailadmin')),
-)
-MANAGERS = ADMINS
+admins = envini.getstrings('mailadmins')
+ADMINS = tuple([('Admin %s' % TITLE, admin) for admin in admins])
+
+managers = envini.getstrings('mailmanagers')
+MANAGERS = tuple([('Manager %s' % TITLE, manager) for manager in managers])
+
 EMAIL_SUBJECT_PREFIX = '[%s] ' % TITLE
-DEFAULT_FROM_EMAIL = envini.get('mailfrom', envini.get('mailadmin'))
+DEFAULT_FROM_EMAIL = envini.get('mailfrom', admins[0])
 SERVER_EMAIL = DEFAULT_FROM_EMAIL
 EMAIL_HOST = envini.get('mailhost')
 EMAIL_HOST_USER = envini.get('mailhost')
