@@ -5,6 +5,11 @@ CHANGELOG
 0.23 (unreleased)
 -----------------
 
+** Breaking changes **
+
+* Rename ``mailadmin`` to ``mailadmins`` in ``etc/settings.ini``
+* Permission systems has been refactored (*see below*)
+
 ** Bug fixes **
 
 * Force browser cache revalidation for path graph (fixes #1029)
